feat: add mailings addition
Users can create Mailing already in an existing bot without updating the answers table.
